<resources>
    <string name="app_name">DeviceManager</string>
    <string name="login_button_text">Login</string>
    <string name="login_text">Login</string>
    <string name="to_text">to</string>
    <string name="device_manager_text">DeviceManager</string>
    <string name="user_name_text">User Name:</string>
    <string name="password_text">Password:</string>
    <string name="register_your_account_text">Register here</string>
    <string name="admin_login_button_text">Switch to admin</string>
    <string name="user_login_button_text">switch to user</string>
    <string name="as_admin_login_text">as Admin</string>
    <string name="register_title">Register</string>
    <string name="email_address_label_text">Email:</string>
    <string name="password_again_text">Repeat password:</string>
    <string name="device_name_label_text">Name:</string>
    <string name="device_state_label_text">Current state:</string>
    <string name="device_first_available_label_text">First Available on:</string>
    <string name="rent_device_button_text">Rent</string>
    <string name="delete_device_button_text">Delete</string>
    <string name="edit_device_button_text">Edit</string>
    <string name="start_menu_device_list_button_text">Device List</string>
    <string name="start_button_rental_requests_list_button_text">Rental Requests List</string>
    <string name="start_menu_register_admin_user_button_text">Register Admin User</string>
    <string name="rental_request_accept_button_text">Accept</string>
    <string name="request_id_label_text">Request id:</string>
    <string name="device_id_label_text">Device id:</string>
    <string name="user_name_label_text">User name:</string>
    <string name="rental_requested_interval_label_text">Rental requested interval:</string>
    <string name="rental_request_status_label_text">Rental Request status</string>
    <string name="register_admin_title">Register administrator</string>
    <string name="create_new_administrator_button_text">Register Administrator</string>
    <string name="take_back_button_text">Take back</string>
    <string name="select_date_button_text">Select</string>
    <string name="click_here_for_calendar_text">click here for Calendar</string>
    <string name="unknown_error_text">Unknown error!</string>
    <string name="create_user_success_message_text">User Creation Success</string>
    <string name="cannot_register_user">Cannot register user</string>
    <string name="add_new_device_as_administrator_button_description">Add new device as Administrator</string>
    <string name="no_devices_text">No devices</string>
    <string name="add_new_device_title">Add new Device</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Add</string>
    <string name="delete_button">Delete button</string>
    <string name="no_rental_requests_text">No requests</string>
    <string name="select_dates_error_message_text">You must select the dates first!</string>
    <string name="comment_label_text">Comment:</string>
    <string name="rental_request_successfully_accepted_message_text">Rental request successfully accepted</string>
    <string name="no_matching_qr_code_error_message_text">The scanned code is not of this device</string>
    <string name="rental_request_successfully_closed_message_text">Rental request successfully closed</string>
    <string name="qr_code_not_found_message">Qr code not found</string>
    <string name="edit_device_name_dialog_title_text">Edit device name</string>
    <string name="device_name_empty_error_message_text">Device name cannot be empty!</string>
    <string name="device_name_edited_successfully_message_text">Device name edited successfully</string>
    <string name="edit_button_text">Edit</string>
    <string name="device_added_successfully_message_text">Device added successfully</string>
    <string name="logout_button_text">Logout</string>
    <string name="admin_success_creation_message_text">Admin created successfully</string>
</resources>